<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/commonsLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/commons_logo_large" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/commonsLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="20dp" >

            <EditText
               android:id="@+id/loginUsername"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:hint="@string/username" >

               <requestFocus />
           </EditText>

           <EditText
	            android:id="@+id/loginPassword"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:hint="@string/password"
               android:inputType="textPassword" />

           <Button
               android:id="@+id/loginButton"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_margin="20dp"
               android:text="@string/login" />
            
        </LinearLayout>
        
    </RelativeLayout>

</FrameLayout>