<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

        <ImageView
                android:id="@+id/commonsLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/commons_logo_large" />

        <TextView
                android:id="@+id/loginSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_subtitle"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="16dip"
                android:gravity="center"
                android:orientation="vertical" >

            <EditText
                    android:id="@+id/loginUsername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textNoSuggestions"
                    >

                <requestFocus />
            </EditText>

            <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            <Button
                    android:id="@+id/loginButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
